# crypto-algorithms

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  bcmine  config.h.in  configure  configure.ac  libtool  sha256.c
src/: bcmine.c  final_hash_256.c  generate_first_hash.c  hello.c  sha256.c  sha256.h  sha256_test.c
